doc(): added speech, video, acceleromer and gyroscope

--- a/bib.bib
+++ b/bib.bib
@@ -68,6 +68,14 @@ year = {2012},
 isbn = {9781449302665}
 }
 
+@book{performancebrowsernetworking,
+author = {Ilya Grigorik},
+title = {High Performance Browser Networking},
+publisher = {O'Reilly Media, Incorporated},
+year = {2013},
+isbn = {9781449344764}
+}
+
 @conference{1000ms,
 author = {Ilya Grigorik},
 title = {Breaking the 1000 ms Time to Glass Mobile Barrier},
@@ -338,4 +346,28 @@ booktitle = {Personal and Ubiquitous Computing 15},
 publisher = {Springer},
 issn = {1617-4909},
 pages = {629–639}
+}
+
+@inproceedings{webspeechapi,
+author = {W3C},
+title = {Web Speech API Specification},
+booktitle = {Specification Draft},
+year = {19 June 2012},
+url = {https://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html}
+}
+
+@conference{moreawesomeweb,
+author = {Eric Bidelman},
+title = {A More Awesome Web},
+booktitle = {Google IO 2013 conference},
+address = {Moscone Center, San Francisco, CA, USA},
+year = {2013},
+}
+
+@conference{webcomponents,
+author = {Eric Bidelman},
+title = {Web Components: A Tectonic Shift for Web Development},
+booktitle = {Google IO 2013 conference},
+address = {Moscone Center, San Francisco, CA, USA},
+year = {2013},
 }
