doc(): added gyroscope api comparision

--- a/intro.tex
+++ b/intro.tex
@@ -145,7 +145,7 @@ za jeho cenné rady, pripomienky a venovaný čas pri konzultáciách.
 \tableofcontents %% tu sa generuje obsah
 \newpage 
 \thispagestyle{empty}
-%\listoftables
+\listoftables
 \newpage
 \thispagestyle{empty}
 \listoffigures 
