docs(): include diagrams

--- a/intro.tex
+++ b/intro.tex
@@ -52,7 +52,7 @@ Fakulta informatiky a informačných technológií
 \large{Miesto vypracovania:  Ústav aplikovanej informatiky, FIIT STU, Bratislava} \\
 \large{Vedúci práce: doc. Ing. Michal Čerňanský PhD.} \\
 \vspace{1.0cm}
-\large{máj 2013} \\
+\large{december 2013} \\
 \end{flushleft}
 
 
@@ -84,11 +84,11 @@ FAKULTA INFORMATIKY A INFORMAČNÝCH TECHNOLÓGII\\
 Autor: Ján Antala\\
 Diplomová práca: Adaptívny web dizajn.\\ 
 Vedúci diplomovej práce: doc. Ing. Michal Čerňanský PhD. \\
-Máj, 2013
+December, 2013
 \newline
 
-Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam.
-V práci vychádzame z techniky ,,Mobile first'', ktorá kladie dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri klasických stolových počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok.
+Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam a novým trendom v oblasti interakcie.
+V práci vychádzame z techniky ,,Mobile first'', ktorá kladie dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri klasických stolových počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok a nové možnosti interakcie webovej aplikácie založených na rozpoznaní reči, pohybu alebo rotácie zariadenia.
 Experimentálnym overením úspešnosti navrhnutých spôsobov adaptácie sme dosiahli lepšie výsledky na testovacej vzorke dát ako boli pôvodne používané.
 
 \newpage
@@ -104,11 +104,11 @@ Degree Course: INFORMATION SYSTEMS
 Author: Ján Antala\\
 Diploma Thesis: Adaptive web design. \\
 Supervisor: doc. Ing. Michal Čerňanský PhD. \\
-2013, May
+2013, December
 \newline
 
-Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. So it is neccessary to adapt web pages for different devices.
-In our work, we follow ,,Mobile First'' design, which emphasizes a great performance on mobile devices and later profit on classical desktop computers. We present a new way of web components adaptation based on a device features and external conditions in our work.
+Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. So it is neccessary to adapt web pages for different devices and new interaction methods.
+In our work, we follow ,,Mobile First'' design, which emphasizes a great performance on mobile devices and later profit on classical desktop computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation.
 The evaluation of the proposed method of adaptation shows slightly better results than original approach.
 
 
@@ -134,7 +134,7 @@ The evaluation of the proposed method of adaptation shows slightly better result
 \bigskip
 
 Týmto sa chcem poďakovať najmä vedúcemu práce, doc. Ing. Michalovi Čerňanskému, PhD.,
-za jeho cenné rady, pripomienky a venovaný čas pri konzultáciách.
+za jeho cenné rady, pripomienky a venovaný čas pri konzultáciách. Vďaka patrí taktiež mojej rodine a všetkým kontribútorom podiaľajúcich sa na zlepšení vytvoreného softvéru.
 \pagebreak
 
 %%%%%%%%%%%%%%%%%%% OBSAH, (LOT, LOF)  %%%%%%%%%%%%%%%%%%%%%%%%%%%
