docs(): rewrite app draft

--- a/document.tex
+++ b/document.tex
@@ -94,53 +94,75 @@
 
 \newcommand{\tab}{\hspace*{2em}}
 
-\newcommand{\listxml{\lstset{
-	backgroundcolor=\color{lbcolor},
-	tabsize=4,
-	rulecolor=,
-	basicstyle=\scriptsize,
-	upquote=true,
-	aboveskip={1\baselineskip},
-	columns=fixed,
-	showstringspaces=false,
-	extendedchars=true,
-	breaklines=true,
-	prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-	frame=single,
-	showtabs=false,
-	showspaces=false,
-	showstringspaces=false,
-	identifierstyle=\ttfamily,
-	keywordstyle=\bf,
-	commentstyle=\texit,
-	stringstyle=\textit,
-	numbers=none,                   % where to put the line-numbers
-	language=Xml
-}}} 
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\newcommand{\listjava{\lstset{
-	backgroundcolor=\color{lbcolor},
-	tabsize=4,
-	rulecolor=,
-	basicstyle=\scriptsize,
-	upquote=true,
-	aboveskip={1\baselineskip},
-%	columns=fixed,
-	showstringspaces=false,
-	extendedchars=true,
-	breaklines=true,
-	prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-	frame=single,
-	showtabs=false,
-	showspaces=false,
-	showstringspaces=false,
-	identifierstyle=\ttfamily,
-	keywordstyle=\bf,
-	commentstyle=\texit,
-	stringstyle=\textit,
-	numbers=left,                   % where to put the line-numbers
-	language=Java
-}}}
+\lstset{frame=tb,
+  language=Java,
+  aboveskip=5mm,
+  belowskip=5mm,
+  showstringspaces=false,
+  columns=flexible,
+  basicstyle={\large\ttfamily},
+  numbers=none,
+  numberstyle=\scriptsize\color{gray},
+  keywordstyle=\color{blue},
+  commentstyle=\color{dkgreen},
+  stringstyle=\color{mauve},
+  breaklines=true,
+  breakatwhitespace=true
+  tabsize=3,
+  numbers=left,
+}
+
+% \newcommand{\listxml{\lstset{
+% 	backgroundcolor=\color{lbcolor},
+% 	tabsize=4,
+% 	rulecolor=,
+% 	basicstyle=\scriptsize,
+% 	upquote=true,
+% 	aboveskip={1\baselineskip},
+% 	columns=fixed,
+% 	showstringspaces=false,
+% 	extendedchars=true,
+% 	breaklines=true,
+% 	prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+% 	frame=single,
+% 	showtabs=false,
+% 	showspaces=false,
+% 	showstringspaces=false,
+% 	identifierstyle=\ttfamily,
+% 	keywordstyle=\bf,
+% 	commentstyle=\textit,
+% 	stringstyle=\textit,
+% 	numbers=none,                   % where to put the line-numbers
+% 	language=Xml
+% }}} 
+
+% \newcommand{\listjava{\lstset{
+% 	backgroundcolor=\color{lbcolor},
+% 	tabsize=4,
+% 	rulecolor=,
+% 	basicstyle=\scriptsize,
+% 	upquote=true,
+% 	aboveskip={1\baselineskip},
+% %	columns=fixed,
+% 	showstringspaces=false,
+% 	extendedchars=true,
+% 	breaklines=true,
+% 	prebreak=\raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+% 	frame=single,
+% 	showtabs=false,
+% 	showspaces=false,
+% 	showstringspaces=false,
+% 	identifierstyle=\ttfamily,
+% 	keywordstyle=\bf,
+% 	commentstyle=\textit,
+% 	stringstyle=\textit,
+% 	numbers=left,                   % where to put the line-numbers
+% 	language=Java
+% }}}
 
 \makeatletter
 \renewcommand\paragraph{\@startsection{paragraph}{4}{\z@}%
@@ -175,19 +197,18 @@
 
 %%%%%%%%%%%%%%%%%%% BIB  %%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 
-
-
-\newpage
-%\begin{appendices}
-%\section{Technická dokumentácia}
-%\section{Používateľská príručka}
-%\section{Obsah CD nosiča}
-%\end{appendices}
-
-\input{appendix.tex}
-
 % \input{bib.tex}
 \bibliographystyle{csplainnat}
 \bibliography{bib.bib}
+
+%%%%%%%%%%%%%%%%%%% APPENDIX  %%%%%%%%%%%%%%%%%%%%%%%%%%%%  
+
+\newpage
+\begin{appendices}
+%\section{Technická dokumentácia}
+%\section{Používateľská príručka}
+%\section{Obsah CD nosiča}
+\input{appendix.tex}
+\end{appendices}
 
 \end{document}
