--- a/intro.tex
+++ b/intro.tex
@@ -88,7 +88,7 @@ December, 2013
 \newline
 
 Používanie mobilných zariadení rapídne rastie a tie so sebou prinášajú nie len rôzne veľkosti displejov a nové interakčné spôsoby, ale aj nové druhy pripojenia na internet. Je preto nevyhnutné prispôsobiť webové stránky rôznym zariadeniam a novým trendom v oblasti interakcie.
-V práci vychádzame z techniky ,,Mobile first'', ktorá kladie dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri klasických stolových počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok a nové možnosti interakcie webovej aplikácie založených na rozpoznaní reči, pohybu alebo rotácie zariadenia.
+V práci vychádzame z techniky ,,Mobile first progressive enhancement'', ktorá kladie dôraz na vytvorenie dizajnu s vysokým výkonom pre mobilné zariadenia a neskorším profitom pri klasických stolových počítačoch. V práci prezentujeme nový prístup adaptácie webových komponentov založenom na vlastnostiach používateľovho zariadenia a externých podmienok a nové možnosti interakcie webovej aplikácie založených na rozpoznaní reči, pohybu alebo rotácie zariadenia.
 Experimentálnym overením úspešnosti navrhnutých spôsobov adaptácie sme dosiahli lepšie výsledky na testovacej vzorke dát ako boli pôvodne používané.
 
 \newpage
@@ -108,23 +108,23 @@ Supervisor: doc. Ing. Michal Čerňanský PhD. \\
 \newline
 
 Mobile device penetration grows rapidly and it brings not only different display sizes with new human interaction methods, but also new kinds of internet connection. So it is neccessary to adapt web pages for different devices and new interaction methods.
-In our work, we follow ,,Mobile First'' design, which emphasizes a great performance on mobile devices and later profit on classical desktop computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation.
+In our work, we follow ,,Mobile First progressive enhancement'' design, which emphasizes a great performance on mobile devices and later profit on classical desktop computers. We present a new way of web components adaptation based on a device features and external conditions in our work and new possibilities of interaction with web application based on speech recognition, motion or device rotation.
 The evaluation of the proposed method of adaptation shows slightly better results than original approach.
 
 
 %%%%%%%%%%%%%%%%%%% PREHLASENIE %%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \pagebreak
-% \thispagestyle{empty}
-% \vglue0pt\bigskip\vfil
-%  \noindent\textbf{Čestné prehlásenie}
-% \newline\newline
-% Čestne prehlasujem, že záverečnú prácu som vypracoval samostatne, s použitím uvedenej
-% literatúry a na základe svojich vedomostí a znalostí.
-% \newline\newline
-% \noindent Bratislava, máj 2013 \hfil
-% \begin{tabular}[t]{c}
-% \hbox to 50mm {\dotfill} \\ \textit{\small Vlastnoručný podpis}
-% \end{tabular}\qquad\linebreak
+\pagebreak
+\thispagestyle{empty}
+\vglue0pt\bigskip\vfil
+ \noindent\textbf{Čestné prehlásenie}
+\newline\newline
+Čestne prehlasujem, že záverečnú prácu som vypracoval samostatne, s použitím uvedenej
+literatúry a na základe svojich vedomostí a znalostí.
+\newline\newline
+\noindent Bratislava, december 2013 \hfil
+\begin{tabular}[t]{c}
+\hbox to 50mm {\dotfill} \\ \textit{\small Vlastnoručný podpis}
+\end{tabular}\qquad\linebreak
 
 %%%%%%%%%%%%%%%%%%% PODAKOVANIE %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \pagebreak
